tests/ui/suggestions/issue-71394-no-from-impl.stderr
error[E0277]: the trait bound `&[i8]: From<&[u8]>` is not satisfied
  --> $DIR/issue-71394-no-from-impl.rs:8:25
   |
LL |     let _: &[i8] = data.into();
   |                         ^^^^ the trait `From<&[u8]>` is not implemented for `&[i8]`
   |
   = help: the following other types implement trait `From<T>`:
             <[bool; LANES] as From<Mask<T, LANES>>>
             <[T; N] as From<Simd<T, N>>>
             <[T; 1] as From<(T,)>>
             <[T; 2] as From<(T, T)>>
             <[T; 3] as From<(T, T, T)>>
             <[T; 4] as From<(T, T, T, T)>>
             <[T; 5] as From<(T, T, T, T, T)>>
             <[T; 6] as From<(T, T, T, T, T, T)>>
           and 7 others
   = note: required for `&[u8]` to implement `Into<&[i8]>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
